# magic-money-bot

./: .gitignore  README.md  config.py  essential.py  main.py  pyproject.toml
app/: __init__.py  callbackquery.py
app/dependencies/: __init__.py  database.py
app/handlers/: __init__.py  core_1.py
