[tool.poetry]
name = "magic-money-bot"
version = "0.1.0"
description = ""
authors = ["arsikurin <2024kurin.av@student.letovo.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
Pyrogram = "^2.0.57"
aiorun = "^2022.4.1"
uvloop = "^0.17.0"
psycopg = {extras = ["c"], version = "^3.1.3"}
orjson = "^3.8.0"
pydantic = {extras = ["dotenv"], version = "^1.10.2"}
colourlib = "^0.5.3"
TgCrypto = "^1.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
